- added new xmls and stuff

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,10 @@
     <string name="readBtn">Read</string>
     <string name="dummy_content">Firebase Database Test Screen</string>
 
+    <!--Landing Activity-->
+    <<string name="clients">FirebaseActivity</string>
+    <string name="employees">FirebaseActivity</string>
+    <string name="settings">FirebaseActivity</string>
+    <string name="appointments">FirebaseActivity</string>
+
 </resources>
