- Rounded gradient buttons added - Landing pages for all users finished

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,7 @@
     <string name="Appointments">Appointments</string>
     <string name="Settings">Settings</string>
 
+    <!--Client Landing Activity-->
+    <string name="Profile">Profile</string>
+
 </resources>
